--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,30 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
-      .svgLoader {
-        animation: spin 0.5s linear infinite;
-        margin: auto;
-        overflow: hidden;
-      }
-      .divLoader {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-      }
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
-
     <!-- Metadata -->
     <meta charset="utf-8" />
 
@@ -78,7 +54,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="root">
+    <div id="root" style="position: relative;">
       <!-- Loader -->
       <!-- <div class="divLoader">
         <svg
