--- a/client/public/index.html
+++ b/client/public/index.html
@@ -49,9 +49,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Web Fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Easy Dash</title>
   </head>
-  <body>
+  <body class="bg-purple-50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root" style="position: relative;">
