--- a/client/public/index.html
+++ b/client/public/index.html
@@ -63,7 +63,7 @@
   <body class="bg-purple-50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="root" style="position: relative;">
+    <div id="root">
       <!-- Loader -->
       <!-- <div class="divLoader">
         <svg
