dark mode, layout fixes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -60,7 +60,7 @@
     />
     <title>Easy Dash</title>
   </head>
-  <body class="bg-purple-50">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root">
