light/dark styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -63,7 +63,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="root" class="dark">
+    <div id="root" class="">
       <!-- Loader -->
       <!-- <div class="divLoader">
         <svg
